--- a/_sources/assignments/hw4/hw4.ipynb
+++ b/_sources/assignments/hw4/hw4.ipynb
@@ -1667,7 +1667,7 @@
       "source": [
         "#### Question 1.4.3\n",
         "\n",
-        "The negative log-likelihood we have been using to train our models can be expressed as\n",
+        "The negative log-likelihood (averaged per token) we have been using to train our models can be expressed as\n",
         "\\begin{equation*}\n",
         "  L = -\\frac{1}{T} \\sum_{t = 1}^{T} \\log p(s[t] | \\text{context})\n",
         "\\end{equation*}\n",
@@ -1676,7 +1676,7 @@
         "  \\text{perplexity} = \\exp(L).\n",
         "\\end{equation*}\n",
         "\n",
-        "Give an intuitive interpretation of what perplexity is. Does the reported perplexity of your trained `TransformerLM` model make sense in terms of samples it generates? (Be sure to distinguish betwen `train` and `validation` perplexity. Which of `train` and `val` perplexity is more helpful for understanding your generated samples? Why?). (*Hint: your answer to Question 1.1.6 may be helpful*)."
+        "Give an intuitive interpretation of what perplexity is. Why might it be a more intuitive or natual measure to report than negative log-likelihood? Does the reported perplexity of your trained `TransformerLM` model make sense in terms of samples it generates? (Be sure to distinguish betwen `train` and `validation` perplexity. Which of `train` and `val` perplexity is more helpful for understanding your generated samples? Why?). (*Hint: your answer to Question 1.1.6 may be helpful*)."
       ]
     },
     {
